# origin

Homework 05/: ClientsControl.cpp  ClientsControl.h  Homework05.cpp  Homework05.sln  Homework05.vcxproj
Homework 06/Task 1/: Homework06.cpp
Homework 06/Task 2/: Homework06.cpp  Homework06.sln  Homework06.vcxproj
Lesson 1/: Task1.cpp
Lesson 1/Task 1/: Task1.cpp
Lesson 1/Task 2/: Task2.cpp
Lesson 1/Task 3/: Task3.cpp
Lesson 10/Task 5/Task5/: CMakeLists.txt  EquilateralTriangle.h  IsoscelesTriangle.h  Quadrangle.h  RectangularTriangle.h
Lesson 11/Task1/: CMakeLists.txt  extended_array.h  test.cpp
Lesson 11/Task2/: CMakeLists.txt  extended_array.h  test.cpp
Lesson 11/Task3/: extended_array.h  test.cpp
Lesson 2/Task 1/: Task1.cpp
Lesson 2/Task 2/: Task2.cpp
Lesson 3/Task 1/: CMakeLists.txt  Task1.cpp
Lesson 3/Task 2/: CMakeLists.txt  Task2.cpp
Lesson 4/Task 1/: Task1.cpp
Lesson 4/Task 2/: Task2.cpp
Lesson 4/Task 3/: Task3.cpp
Lesson 5/Task 1/: Task1.cpp  calculator.cpp  calculator.h
Lesson 5/Task 2/: Counter.cpp  Counter.h  Task2.cpp
Lesson 5/Task 3/: Figure.cpp  Figure.h  Quadrangle.h  Rectangle.cpp  Rhombus.cpp  Square.h  Task3.cpp  Triangle.cpp
Lesson 6/Task 1/: Task1.cpp
Lesson 6/Task 2/: Task2.cpp
Lesson 7/Task 1/: Task1.cpp
Lesson 7/Task 2/: BadFigure.cpp  BadFigure.h  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  RectangularTriangle.cpp  RectangularTriangle.h  (+7 more)
(+53 files in other folders)
